<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:text="@string/facolt"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        android:background="?attr/colorButtonNormal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:text="@string/anno"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold|italic" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp"
        android:background="?attr/colorButtonNormal"></Spinner>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/orario"
        android:textColor="#FFFFFF"
        android:textStyle="bold|italic" />

</RelativeLayout>